2007-04-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000896: Crash running Narrative Web report -
	  system memory exhausted.

2007-04-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.close_undodb): don't complain
	if the undo file isn't here.

2007-04-05  Don Allingham  <don@gramps-project.org>
	* src/plugins/Checkpoint.py: fix some more Popen issues

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000998: Source Ref link refers to nothing in
	  Narrative web report.

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000996: Individual attributes do no include
	  source reference citations in Narrative Web report.

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/DateHandler/_DateParser.py: Fix a typo
	* src/DateEdit.py: Fix a typo

2007-04-04  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/Checkpoint.py: 0000993: Checkpoint tool crashes in Windows

2007-04-04  Don Allingham  <don@gramps-project.org>
	* src/DateHandler/_DateParser.py: fix text string that contians a valid
	modifier.
	* src/Editors/_EditPerson.py: disable OK button on save to prevent
	double clicks
	* src/Editors/_EditPrimary.py: disable OK button on save to prevent
	double clicks
	* src/docgen/ODFDoc.py: XML escape strings

2007-04-01  Benny Malengier  <bm@cage.ugent.be>
	* help/nl/nl.po: correct keyword error
	  NarrativeWeb
2007-03-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000975: remove extra (/b) HTML tags in 
	  NarrativeWeb

2007-03-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000976: NarrativeWeb: gramps ID always 
	  output regardless of setting

2007-03-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000969: NarrativeWeb plugin: include the 
	  date in the media object pages
