@@ -1,4 +1,8 @@
 2007-04-08  Brian Matherly  <brian@gramps-project.org>
+	* src/plugins/NarrativeWeb.py: 0001006: Narrative Web: Media objects missing
+	  title (description), mime_type, or path, are displayed poorly.
+
+2007-04-08  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/NarrativeWeb.py: 0000896: Crash running Narrative Web report -
 	  system memory exhausted.
 
